# assetScrapper

./: .gitignore  Dockerfile  Pipfile  README.md  assetScrapper.7z  main.py  objscrapper.py  pyproject.toml  readertest.py  requirements.txt  teste.json
.github/workflows/: main.yaml
scrapper/: main.py
