[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper"
version = "0.2.1"
description = "Scraps statusinvetst website to help you manage your investments (Brazil, only)"
authors = [ { name = "Felipe ReVz Santos", email = "fmsantos1997@hotmail.com" }]
dependencies = [
    "requests",
    "bs4"
]

[project.scripts]
scrapper = "scrapper.main:main"
